a first start at a presentation, too long

--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -85,7 +85,7 @@ Michael D. Ward\\
 
 \begin{center}
 \begin{tabular}{ccc}
-Jacob M. Montgomery, & Florian Hollenbach, & \& Michael D. Ward\\
+Jacob M. Montgomery, & Florian M. Hollenbach, & \& Michael D. Ward\\
 \end{tabular}
 \end{center}
 
