--- a/APSA_2012/Presentation/Apsa_2012_beamer.tex
+++ b/APSA_2012/Presentation/Apsa_2012_beamer.tex
@@ -95,7 +95,7 @@ Washington University in St. Louis
 \section{Introduction}
 
 \frame{\frametitle{Ensemble Bayesian Model Averaging (EBMA)}
-EBMA is principled way of combining predictions to increase
+EBMA is a principled way of combining predictions to increase
 out-of-sample performance
 \begin{itemize}
 \item Models are weighted based on calibration period
@@ -187,7 +187,7 @@ Our solutions so far:
 \end{itemize}
 }
 
-\frame{\frametitle{Observed and forecasted U.S. unemployment (1981-2007) }
+\frame{\frametitle{Observed and Forecasted U.S. unemployment (1981-2007) }
 \begin{center}
 \includegraphics[scale=.65]{mdwtimeSeries2}
 \end{center}
@@ -195,7 +195,7 @@ Our solutions so far:
 }
 
 
-\frame{\frametitle{Comparing Forecasts of U.S. Unemployment}     
+\frame{\frametitle{Comparing Forecasts of U.S. Unemployment -- fit statistics summary}     
 \begin{center}
 \begin{footnotesize}
 \begin{tabular}{lrrrrrrrr}
@@ -217,7 +217,7 @@ Mean& 0.61 & 0.80 & 0.46 & 0.102 & 9.71 & 9.06 & 0.93 & 46.23 \\
 
 
 
-\frame{\frametitle{Predicting the Incumbent Voteshare in the 2012 Presidential Election}     
+\frame{\frametitle{Predicting the Incumbent Voteshare in the 2012 Presidential Election -- Calibration Sample}     
 
 \begin{center}
 \begin{footnotesize}
@@ -241,7 +241,7 @@ Mean& 0.61 & 0.80 & 0.46 & 0.102 & 9.71 & 9.06 & 0.93 & 46.23 \\
 
 
 
-\frame{\frametitle{Model weights and in-sample fit statistics for EBMA model of U.S. Presidential Elections (1992-2008)}
+\frame{\frametitle{Model Weights and In-Sample Fit Statistics for EBMA Model of U.S. Presidential Elections (1992-2008)}
 \begin{center}
 \begin{footnotesize}
 \begin{tabular}{lrrrr}
@@ -266,7 +266,7 @@ EBMA &  & 1.92 & 1.56 \\
 
 \frame{\frametitle{Predictive Ensemble PDFs of Incumbent-Party Vote Share}
 \begin{center}
-\includegraphics[scale=.5]{presForecast}
+\includegraphics[scale=.45]{presForecast2012}
 \end{center}
 
 }
